--- a/app/views/admin/service_addresses/show.html.erb
+++ b/app/views/admin/service_addresses/show.html.erb
@@ -34,19 +34,7 @@
           <%= hidden_field_tag :service_address_token, @service_address.token %>
           <%= render partial: "layouts/error_container", locals: { resource: @service_job } %>
 
-          <% @service_job.default_service_item_names.each do |service_name| %>
-            <% item = @service_job.service_items.find_or_initialize_by(description: service_name) %>
-            <%= render partial: "admin/service_addresses/service_job", locals: { item: item } %>
-          <% end %>
-
-          <template id="extra-jobs-template">
-            <%= render partial: "admin/service_addresses/service_job" %>
-          </template>
-          <div class="extra-jobs">
-            <% @service_job.service_items.not_default.each do |item| %>
-              <%= render partial: "admin/service_addresses/service_job", locals: { item: item } %>
-            <% end %>
-          </div>
+          <%= render partial: "admin/service_items/index", locals: { service_job: @service_job } %>
 
           <%= f.text_area :notes, placeholder: "Additional notes for service done" %>
           <div class="text-center">
