--- a/app/views/admin/service_items/_index.html.erb
+++ b/app/views/admin/service_items/_index.html.erb
@@ -1,12 +1,16 @@
-<% item ||= @service_job.service_items.new %>
-<div class="inline-fields">
-  <div class="form-field">
-    <%= text_field_tag "service_job[service_items_attributes][][description]", item.description, placeholder: "Other", class: "other-field" %>
-  </div>
-  <div class="form-field" data-fa="clock">
-    <%= text_field_tag "service_job[service_items_attributes][][time_in_minutes]", item.time_in_minutes, placeholder: "minutes"  %>
-  </div>
-  <div class="form-field" data-fa="money">
-    <%= text_field_tag "service_job[service_items_attributes][][cost_in_dollars]", item.cost_in_dollars %>
-  </div>
+<% service_job ||= @service_job %>
+
+<% service_job.default_service_item_names.each do |service_name| %>
+  <% item = service_job.service_items.find_or_initialize_by(description: service_name) %>
+  <%= render partial: "admin/service_items/show", locals: { item: item } %>
+<% end %>
+
+<template id="extra-jobs-template">
+  <%= render partial: "admin/service_items/show" %>
+</template>
+
+<div class="extra-jobs">
+  <% service_job.service_items.not_default.each do |item| %>
+    <%= render partial: "admin/service_items/show", locals: { item: item } %>
+  <% end %>
 </div>
