--- a/app/views/admin/service_jobs/index.html.erb
+++ b/app/views/admin/service_jobs/index.html.erb
@@ -14,7 +14,7 @@
           <small>
             <p>
               Amount:
-              <strong><%= number_to_currency(service_job.cost) || "N/A" %></strong>
+              <strong><%= number_to_currency(service_job.cost_in_dollars) || "N/A" %></strong>
             </p>
             <p>
               Date:
