--- a/app/views/user_mailer/invoice.html.erb
+++ b/app/views/user_mailer/invoice.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: "admin/service_jobs/invoice_table", locals: { service_job: @service_job } %>
+<%= render partial: "admin/service_jobs/invoice_table", locals: { invoice: @invoice } %>
