--- a/app/views/admin/service_jobs/show.html.erb
+++ b/app/views/admin/service_jobs/show.html.erb
@@ -13,7 +13,7 @@
         <small>
           <p>
             Amount:
-            <strong><%= number_to_currency(@service_job.cost) || "N/A" %></strong>
+            <strong><%= number_to_currency(@service_job.cost_in_dollars) || "N/A" %></strong>
           </p>
           <p>
             Date:
@@ -28,8 +28,23 @@
         </small>
       <% end %>
 
+      <div class="content-label">Billing Details</div>
+      <%= content_tag :div, class: :cell do %>
+        <% if @client.present? %>
+          <h3><%= @client.name %></h3>
+          <small>Contact: <%= @client.email %> | <%= @client.phone %></small> <br>
+        <% else %>
+          <h3>Client not added yet.</h3>
+        <% end %>
+      <% end %>
+
+      <div class="btn-spread">
+        <%= link_to "Deliver Invoice", [:deliver_invoice, :admin, @service_job], class: :btn, method: :post %>
+        <%= link_to "Mark as Paid", [:mark_paid, :admin, @service_job], class: "btn float-right", method: :post %>
+      </div>
+
       <div class="content-label">Invoice</div>
-      <%= render partial: "admin/service_jobs/invoice_table", locals: { service_job: @service_job } %>
+      <%= render partial: "admin/service_jobs/invoice_table", locals: { invoice: (@service_job.invoice || @service_job) } %>
 
     </div>
   </div>
