--- a/app/views/admin/service_items/_show.html.erb
+++ b/app/views/admin/service_items/_show.html.erb
@@ -3,10 +3,10 @@
   <div class="form-field">
     <%= text_field_tag "service_job[service_items_attributes][][description]", item.description, placeholder: "Other", class: "other-field" %>
   </div>
-  <div class="form-field" data-fa="clock">
-    <%= text_field_tag "service_job[service_items_attributes][][time_in_minutes]", item.time_in_minutes, placeholder: "minutes"  %>
+  <div class="form-field small-field">
+    <%= text_field_tag "service_job[service_items_attributes][][unit_count]", item.unit_count, placeholder: "units"  %>
   </div>
-  <div class="form-field" data-fa="money">
-    <%= text_field_tag "service_job[service_items_attributes][][cost_in_dollars]", item.cost_in_dollars %>
+  <div class="form-field" data-fa="money" data-after="/unit">
+    <%= text_field_tag "service_job[service_items_attributes][][unit_cost_in_pennies]", item.unit_cost_in_dollars %>
   </div>
 </div>
