Properly add items

--- a/app/views/admin/service_addresses/index.html.erb
+++ b/app/views/admin/service_addresses/index.html.erb
@@ -17,7 +17,7 @@
         <p><%= link_to "New Service Address", new_admin_service_address_path, class: :btn %></p>
       </div>
       <% @service_addresses.each do |service_address| %>
-        <%= link_to admin_service_address_path(service_address), class: :cell do %>
+        <%= link_to [:new, :admin, :service_job, service_address_token: service_address], class: :cell do %>
           <h3><%= service_address.name.presence || service_address.address %></h3>
           <small>
             <%= service_address.frequency.titleize %> <br>
