--- a/app/views/admin/service_items/_show.html.erb
+++ b/app/views/admin/service_items/_show.html.erb
@@ -1,12 +1,13 @@
 <% item ||= ServiceItem.new %>
 <div class="inline-fields">
   <div class="form-field">
+    <%= hidden_field_tag "service_job[service_items_attributes][][id]", item.id %>
     <%= text_field_tag "service_job[service_items_attributes][][description]", item.description, placeholder: "Other", class: "other-field" %>
   </div>
   <div class="form-field small-field">
-    <%= text_field_tag "service_job[service_items_attributes][][unit_count]", item.unit_count, placeholder: "units"  %>
+    <%= text_field_tag "service_job[service_items_attributes][][unit_count]", item.unit_count, placeholder: "#units"  %>
   </div>
   <div class="form-field" data-fa="money" data-after="/unit">
-    <%= text_field_tag "service_job[service_items_attributes][][unit_cost_in_pennies]", item.unit_cost_in_dollars %>
+    <%= text_field_tag "service_job[service_items_attributes][][unit_cost_in_dollars]", item.unit_cost_in_dollars %>
   </div>
 </div>
