--- a/app/views/admin/service_jobs/show.html.erb
+++ b/app/views/admin/service_jobs/show.html.erb
@@ -4,6 +4,7 @@
     <div class="content">
       <div class="btn-spread">
         <%= link_to "Back", [:admin, :service_jobs], class: :btn %>
+        <%= link_to "Edit", [:edit, :admin, @service_job], class: "btn float-right" %>
       </div>
 
       <div class="content-label">Service Job</div>
