--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,14 +5,14 @@
       <div class="btn-spread">
         <%= link_to "Account", :account, class: :btn %>
       </div>
-      
+
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <div class="cell">
           <%= render "devise/shared/error_messages", resource: resource %>
 
           <div class="form-field">
-            <%= f.label :name %>
-            <%= f.text_field :name, autocomplete: "name" %>
+            <%= f.label :name, "Full Name" %>
+            <%= f.text_field :name, autocomplete: "full_name" %>
           </div>
 
           <div class="form-field">
