--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,9 +9,11 @@
     <div class="content">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <div class="cell">
+          <%= render "devise/shared/error_messages", resource: resource %>
+          
           <div class="form-field">
-            <%= f.label :name %>
-            <%= f.text_field :name, autofocus: true, autocomplete: "name", data: parsley(:required) %>
+            <%= f.label :name , "Full Name"%>
+            <%= f.text_field :name, autofocus: true, autocomplete: "full_name", data: parsley(:required) %>
           </div>
 
           <div class="form-field">
