--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,9 +1,6 @@
 <% if resource.errors.any? %>
   <div class="error-container" id="error_explanation">
-    <h4><%= I18n.t("errors.messages.not_saved",
-               count: resource.errors.count,
-               resource: resource.class.model_name.human.downcase)
-     %></h4>
+    <h4>Failed to save your account:</h4>
     <ul>
       <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
