--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,6 +4,7 @@
     <div class="content">
       <div class="btn-spread">
         <%= link_to "Account", :account, class: :btn %>
+        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "btn danger" %>
       </div>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
