--- a/app/views/admin/service_jobs/_invoice_table.html.erb
+++ b/app/views/admin/service_jobs/_invoice_table.html.erb
@@ -19,6 +19,10 @@
 <% end %>
 
 <div class="cell">
+  <p>Month of August</p>
+</div>
+
+<div class="cell">
   <table style="width: 100%">
     <tr>
       <th>Description</th>
