--- a/app/views/admin/service_items/_index.html.erb
+++ b/app/views/admin/service_items/_index.html.erb
@@ -1,12 +1,14 @@
 <% service_job ||= @service_job %>
 
-<% service_items = service_job.service_items.to_a %>
-<% service_job.default_services.each do |service_name, service_cost| %>
-  <%=
-    item = service_items.find { |service_item| service_item.description == service_name } || service_job.service_items.new(description: service_name)
-    item.unit_cost_in_dollars ||= service_cost
-    render partial: "admin/service_items/show", locals: { item: item }
-  %>
+<% unless service_job.persisted? %>
+  <% service_items = service_job.service_items.to_a %>
+  <% service_job.default_services.each do |service_name, service_cost| %>
+    <%=
+      item = service_items.find { |service_item| service_item.description == service_name } || service_job.service_items.new(description: service_name)
+      item.unit_cost_in_dollars ||= service_cost
+      render partial: "admin/service_items/show", locals: { item: item }
+    %>
+  <% end %>
 <% end %>
 
 <template id="extra-jobs-template">
@@ -14,7 +16,7 @@
 </template>
 
 <div class="extra-jobs">
-  <% service_job.service_items.not_default.each do |item| %>
+  <% service_job.service_items.order(:position).each do |item| %>
     <%= render partial: "admin/service_items/show", locals: { item: item } %>
   <% end %>
 </div>
