--- a/app/views/admin/service_jobs/show.html.erb
+++ b/app/views/admin/service_jobs/show.html.erb
@@ -37,6 +37,9 @@
         <% else %>
           <h3>Client not added yet.</h3>
         <% end %>
+        <% if @invoice.sent? %>
+          <small>Invoice sent to: <%= @invoice.sent_to_email %> <%= @invoice.sent_at&.to_formatted_s(:simple_with_time) %></small> <br>
+        <% end %>
         <% if @invoice.try(:paid?) %>
           <p class="text-right">
             Invoice paid: <%= @invoice.paid_at.to_formatted_s(:simple_with_time) %>
