--- a/app/views/admin/service_jobs/index.html.erb
+++ b/app/views/admin/service_jobs/index.html.erb
@@ -11,22 +11,7 @@
         <%= link_to [:admin, service_job], class: :cell do %>
           <% service_address = service_job.service_address %>
           <h3><%= service_address.name.presence || service_address.address %></h3>
-          <small>
-            <p>
-              Amount:
-              <strong><%= number_to_currency(service_job.cost_in_dollars) || "N/A" %></strong>
-            </p>
-            <p>
-              Date:
-              <strong><%= service_job.created_at.local.to_formatted_s(:simple_with_time) %></strong>
-            </p>
-            <% if service_job.notes.present? %>
-              <p>
-                Notes:
-                <%= service_job.notes %>
-              </p>
-            <% end %>
-          </small>
+          <%= render partial: "show", locals: { service_job: service_job } %>
         <% end %>
       <% end %>
 
