--- a/app/views/admin/service_addresses/form.html.erb
+++ b/app/views/admin/service_addresses/form.html.erb
@@ -16,6 +16,11 @@
           </div>
 
           <div class="form-field">
+            <%= f.label :default_email, "Default invoice email" %>
+            <%= f.text_field :default_email %>
+          </div>
+
+          <div class="form-field">
             <%= f.label :address, "Street Address" %>
             <%= f.text_field :address %>
           </div>
