--- a/app/assets/stylesheets/components/forms.scss
+++ b/app/assets/stylesheets/components/forms.scss
@@ -17,10 +17,22 @@
 }
 
 // Text-ish
-input[type=color], input[type=date], input[type=datetime], input[type=email],
-input[type=month], input[type=number], input[type=password], input[type=search],
-input[type=tel], input[type=text], input[type=time], input[type=url],
-input[type=week], textarea, .textarea, .StripeElement {
+.StripeElement,
+.textarea,
+input[type=color],
+input[type=date],
+input[type=datetime],
+input[type=email],
+input[type=month],
+input[type=number],
+input[type=password],
+input[type=search],
+input[type=tel],
+input[type=text],
+input[type=time],
+input[type=url],
+input[type=week],
+textarea {
   box-sizing: border-box;
   margin: 4px auto;
 
@@ -32,18 +44,23 @@ input[type=week], textarea, .textarea, .StripeElement {
 
   font-size: 18px;
 }
+
 textarea {
   min-height: 50px;
   resize: vertical;
 }
 
 // Button-ish
-.btn, button, input[type=button], input[type=reset], input[type=submit] {
+.btn,
+button,
+input[type=button],
+input[type=reset],
+input[type=submit] {
   box-sizing: border-box;
   margin-top: 2px;
   margin-bottom: 2px;
 
-  box-shadow: inset 0px 1px 0px 0px map-get($pri, l3);
+  box-shadow: inset 0 1px 0 0 map-get($pri, l3);
   border: 1px solid map-get($pri, l5);
   border-radius: 6px;
   background: linear-gradient(to bottom, map-get($pri, base) 5%, map-get($pri, d3) 100%);
@@ -56,40 +73,44 @@ textarea {
   font-size: 15px;
   font-weight: bold;
   text-decoration: none;
-  text-shadow: 0px 1px 0px #1570CD;
+  text-shadow: 0 1px 0 #1570CD;
 
   &:hover {
     cursor: pointer;
     background: linear-gradient(to bottom, map-get($pri, d3) 5%, map-get($pri, base) 100%);
     background-color: map-get($pri, d10);
   }
+
   &:active {
     position: relative;
     top: 1px;
   }
+
   &.wide {
     padding: 8px 24px;
     width: 100%;
   }
+
   &.danger {
-    box-shadow: inset 0px 1px 0px 0px lighten($danger, 15%);
+    box-shadow: inset 0 1px 0 0 lighten($danger, 15%);
     border: 1px solid darken($danger, 5%);
     background: linear-gradient(to bottom, $danger 5%, darken($danger, 15%) 100%);
     background-color: $danger;
+
     &:hover {
       background: linear-gradient(to bottom, darken($danger, 15%) 5%, $danger 100%);
       background-color: darken($danger, 15%);
     }
   }
+
   &.disabled {
     cursor: not-allowed;
-    box-shadow: inset 0px 1px 0px 0px lighten($grey-blue, 10%);
+    box-shadow: inset 0 1px 0 0 lighten($grey-blue, 10%);
     border: 1px solid darken($grey-blue, 5%);
     background: linear-gradient(to bottom, $text-color, $grey-blue 100%);
     background-color: $text-color;
   }
 }
-
 
 select {
   appearance: none;
@@ -100,7 +121,7 @@ select {
   border: 2px solid rgba($grey-blue, 0.5);
   border-radius: 4px;
 
-  background: white url('https://image.freepik.com/free-icon/caret-arrowhead-facing-down_318-34455.png') no-repeat calc(100% - 15px) 55%;
+  background: white url("https://image.freepik.com/free-icon/caret-arrowhead-facing-down_318-34455.png") no-repeat calc(100% - 15px) 55%;
   background-color: white;
   background-size: 10px 10px;
   padding: 8px;
@@ -121,7 +142,10 @@ select {
 }
 
 .quickbox-wrapper {
-  input[type=checkbox] { display: none; }
+  input[type=checkbox] {
+    display: none;
+  }
+
   input[type=checkbox] + label {
     .checkbox-placeholder {
       display: inline-block;
@@ -141,6 +165,7 @@ select {
         border-radius: 4px;
         content: "";
       }
+
       &:after {
         position: absolute;
         top: -8px;
@@ -150,10 +175,12 @@ select {
       }
     }
   }
+
   input[type=checkbox]:not(:checked) + label:hover .checkbox-placeholder:after {
     color: rgba(map-get($pri, base), 0.7);
     content: "\f00c";
   }
+
   input[type=checkbox]:checked + label .checkbox-placeholder:after {
     color: map-get($pri, base);
     content: "\f00c";
@@ -161,7 +188,10 @@ select {
 }
 
 .checkbox-wrapper {
-  input[type=checkbox] { display: none; }
+  input[type=checkbox] {
+    display: none;
+  }
+
   input[type=checkbox] + label {
     .checkbox-placeholder {
       display: inline-block;
@@ -181,6 +211,7 @@ select {
         border-radius: 4px;
         content: "";
       }
+
       &:after {
         position: absolute;
         top: -8px;
@@ -190,10 +221,12 @@ select {
       }
     }
   }
+
   input[type=checkbox]:not(:checked) + label:hover .checkbox-placeholder:after {
     color: rgba(map-get($pri, base), 0.7);
     content: "\f00c";
   }
+
   input[type=checkbox]:checked + label .checkbox-placeholder:after {
     color: map-get($pri, base);
     content: "\f00c";
@@ -204,7 +237,10 @@ select {
   display: inline-block;
   vertical-align: middle;
 
-  input[type=radio] { display: none; }
+  input[type=radio] {
+    display: none;
+  }
+
   input[type=radio] + label {
     .radio-placeholder {
       display: inline-block;
@@ -224,6 +260,7 @@ select {
         border-radius: 100%;
         content: "";
       }
+
       &:after {
         position: absolute;
         top: 3px;
@@ -235,9 +272,11 @@ select {
       }
     }
   }
+
   input[type=radio]:not(:checked) + label:hover .radio-placeholder:after {
     background: rgba(map-get($pri, base), 0.7);
   }
+
   input[type=radio]:checked + label .radio-placeholder:after {
     background: map-get($pri, base);
   }
