--- a/app/views/admin/service_jobs/_show.html.erb
+++ b/app/views/admin/service_jobs/_show.html.erb
@@ -16,7 +16,7 @@
   <% if service_job.notes.present? %>
     <p>
       Notes:
-      <%= service_job.notes %>
+      <note><%= service_job.notes %></note>
     </p>
   <% end %>
   <% if service_job.paid? %>
