--- a/app/assets/stylesheets/components/forms.scss
+++ b/app/assets/stylesheets/components/forms.scss
@@ -105,10 +105,12 @@ input[type=submit] {
 
   &.disabled {
     cursor: not-allowed;
-    box-shadow: inset 0 1px 0 0 lighten($grey-blue, 10%);
-    border: 1px solid darken($grey-blue, 5%);
-    background: linear-gradient(to bottom, $text-color, $grey-blue 100%);
-    background-color: $text-color;
+    pointer-events: none;
+    color: $grey-light !important;
+    box-shadow: inset 0 1px 0 0 lighten($grey-dark, 10%);
+    border: 1px solid darken($grey-dark, 5%);
+    background: linear-gradient(to bottom, $grey-disabled, $grey-dark 100%);
+    background-color: $grey-disabled;
   }
 }
 
