--- a/app/views/account/show.html.erb
+++ b/app/views/account/show.html.erb
@@ -31,22 +31,23 @@
         <% end %>
       <% end %>
 
-      <div class="content-label">Service Address</div>
-      <% @service_addresses.each do |service_address| %>
-        <%= link_to edit_service_address_path(service_address), class: :cell do %>
-          <h3><%= service_address.address %></h3>
-          <small>
-            <%= service_address.frequency.titleize %> <br>
-            Last Service:
-            <strong><%= service_address.last_service&.to_formatted_s(:simple) || "Never Serviced" %></strong>
-          </small>
+      <div class="content-label">Invoices</div>
+      <% @invoices.each do |invoice| %>
+        <%= link_to invoice_path(invoice), class: :cell do %>
+          <% invoice.service_jobs.each do |service_job| %>
+            <% service_address = service_job.service_address %>
+
+            <h3><%= service_address.name.presence || service_address.address %></h3>
+            <%= render partial: "admin/service_jobs/show", locals: { service_job: service_job, user_facing: true } %>
+          <% end %>
         <% end %>
       <% end %>
 
-      <%= link_to new_service_address_path, class: "text-center cell" do %>
-        <small>+ Add Service Address</small>
+      <% if @invoices.none? %>
+        <div class="cell">
+          No invoices yet.
+        </div>
       <% end %>
-
     </div>
   </div>
 </div>
