--- a/app/views/devise/registrations/shh.html.erb
+++ b/app/views/devise/registrations/shh.html.erb
@@ -7,7 +7,47 @@
       </div>
     </div>
     <div class="content">
-      <p>Please reach out if you need to sign up</p>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <div class="cell">
+          <%= render "devise/shared/error_messages", resource: resource %>
+
+          <div class="form-field">
+            <%= f.label :name , "Full Name"%>
+            <%= f.text_field :name, autofocus: true, autocomplete: "full_name", data: parsley(:required) %>
+          </div>
+
+          <div class="form-field">
+            <%= f.label :email %>
+            <%= f.email_field :email, autocomplete: "email", data: parsley(:required) %>
+          </div>
+
+          <div class="form-field">
+            <%= f.label :phone %>
+            <%= f.text_field :phone, autocomplete: "phone_number", data: parsley(:required) %>
+          </div>
+
+          <div class="form-field">
+            <%= f.label :password %>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %><br />
+            <%= f.password_field :password, autocomplete: "new-password" %>
+          </div>
+
+          <div class="form-field">
+            <%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+          </div>
+
+          <div class="text-center">
+            <div class="actions">
+              <%= f.submit "Sign up" %>
+            </div>
+
+            <%= render "devise/shared/links" %>
+          </div>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
